fixed overflowing .opening h1, reduced h1 smartphone fontSize

--- a/assets/static/css/style.css
+++ b/assets/static/css/style.css
@@ -182,8 +182,8 @@ h1 {
 
 @media only screen and (max-width: 600px) {
   h1 {
-    margin-top: 1.5em;
-    font-size: 2.4em;
+    margin-top: 1.8em;
+    font-size: 2.2em;
     line-height: 1.25em;
   }
 }
@@ -321,8 +321,16 @@ div.opening {
   padding: .2em 1em 1em 1em;
 }
 
-.opening h1 {
-  width: 460px;
+@media only screen and (min-width: 601px) and (max-width: 1280px) {
+  .opening h1 {
+    width: 460px;
+  }
+}
+
+@media only screen and (min-width: 1281px) {
+  .opening h1 {
+    width: 460px;
+  }
 }
 
 #newsletter {
